<?xml version="1.0"?>
<package>
    <name>robojackets_3d_trajectory_planning_node</name>
    <version>0.0.1</version>
    <description>The robojackets_3d_trajectory_planning_node package</description>
    <maintainer email="jonathan.schmalhofer@mytum.de">Jonathan Bryan Schmalhofer</maintainer>

    <license>???</license>

    <author>RoboJackets</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>js_messages</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>octomap</build_depend>
    <build_depend>octomap_msgs</build_depend>  
    <build_depend>octomap_ros</build_depend>
    <build_depend>eigen3</build_depend>
    <build_depend>cmake_modules</build_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>js_messages</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>octomap</run_depend>
    <run_depend>octomap_msgs</run_depend>
    <run_depend>octomap_ros</run_depend>

</package>
